--- a/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
+++ b/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\AnimationClip.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\Particle.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
