CreateFromFBXModel() 편의 기능 제공 / Animation 구조 구현 중
CreateFromFBXModel() 편의 기능 제공 / Animation 구조 구현 중

--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\SkinnedMeshRenderer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimationClip.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ParticleRenderer.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\Avatar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -121,5 +122,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\SkinnedMeshRenderer.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimationClip.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\ParticleRenderer.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\Avatar.h" />
   </ItemGroup>
 </Project>
