--- a/DUOLGame/DUOLGame.vcxproj
+++ b/DUOLGame/DUOLGame.vcxproj
@@ -159,6 +159,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGame\ProtoType\Scripts\Plane.cpp" />
+    <ClCompile Include="src\DUOLGame\ProtoType\Objects\PlayerCharacter.cpp" />
+    <ClCompile Include="src\DUOLGame\ProtoType\Scripts\CharacterController.cpp" />
+    <ClCompile Include="src\DUOLGame\ProtoType\Scenes\ProtoTypeScene.cpp" />
     <ClCompile Include="src\DUOLGame\TestScripts\CreateAndDestroyTest.cpp" />
     <ClCompile Include="src\DUOLGame\TestScripts\MoveController.cpp" />
     <ClCompile Include="src\DUOLGame\TestScripts\PhysicsEventTest.cpp" />
@@ -171,15 +175,19 @@
     <ClCompile Include="src\DUOLGame\TestScenes\YDTestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\DUOLGame\Application.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\Scripts\CharacterController.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\CreateAndDestroyTest.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\EnableTest.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\CoroutineLogTest.h" />
     <ClInclude Include="Include\DUOLGame\TestScenes\CometTestScene.h" />
-    <ClInclude Include="Include\DUOLGame\Application.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\ModelShooter.h" />
     <ClInclude Include="Include\DUOLGame\TestScenes\YDTestScene.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\PhysicsEventTest.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\MoveController.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\Scenes\ProtoTypeScene.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\Objects\PlayerCharacter.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\Scripts\Plane.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
