--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -56,6 +56,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimationClip.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ParticleRenderer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Avatar.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshCollider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -123,5 +124,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimationClip.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\ParticleRenderer.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Avatar.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\MeshCollider.h" />
   </ItemGroup>
 </Project>
